# bars-tool

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  barstypes.h  crc32.h  handlers.h  logging.h  macros.h  main.cpp
